--- a/dashboard.html
+++ b/dashboard.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!doctype html> 
 <html lang="en">
   <head>
     <!-- Required meta tags -->
@@ -115,8 +115,8 @@
 			<td>150</td>
 		  </tr>
 		</tbody>
-	  </table>
-	</div>
+	  </table> -->
+	<!-- </div>
 	
 	<h3>Charts</h3>
 	<hr>
