update to webpage

--- a/Webpage/startbootstrap-modern-business-gh-pages/index.html
+++ b/Webpage/startbootstrap-modern-business-gh-pages/index.html
@@ -96,7 +96,7 @@
                 </div>
             </section>
             <!-- Testimonial section-->
-            <div class="py-5 bg-light">
+            <div class="py-1 bg-light">
                 <div class="container px-5 my-5">
                     <div class="row gx-5 justify-content-center">
                         <div class="col-lg-10 col-xl-7">
@@ -195,10 +195,10 @@
                     <section class="py-5 bg-light" id="scroll-target">
                         <div class="container px-5 my-5">
                             <div class="row gx-5 align-items-center">
-                                <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0" src="https://dummyimage.com/600x400/343a40/6c757d" alt="..." /></div>
+                                <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0" src="assets/feature_importance.png" alt="..." /></div>
                                 <div class="col-lg-6">
-                                    <h2 class="fw-bolder">Our founding</h2>
-                                    <p class="lead fw-normal text-muted mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto est, ut esse a labore aliquam beatae expedita. Blanditiis impedit numquam libero molestiae et fugit cupiditate, quibusdam expedita, maiores eaque quisquam.</p>
+                                    <h2 class="fw-bolder">SVM</h2>
+                                    <p class="lead fw-normal text-muted mb-0">The most important features in predicting the risk of developing heart disease were age and sex. The Support vector machine was the best performing model in terms of accuracy. As you age, so do your blood vessels. They become less flexible, making it harder for blood to move through them easily. Fatty deposits called plaques also collect along your atery walls and slow the blood flow from the heart. The incidence of heart disease is known to be higher in men than in women of similar age, and this gender difference is more prominent at a younger age and is partly explained by protective effects of sex hormones. Accuracy for the model equaled 86%. </p>
                                 </div>
                             </div>
                         </div>
@@ -213,28 +213,28 @@
                 <div class="row gx-5 row-cols-1 row-cols-sm-2 row-cols-xl-4 justify-content-center">
                     <div class="col mb-5 mb-5 mb-xl-0">
                         <div class="text-center">
-                            <img class="img-fluid rounded-circle mb-4 px-4" src="https://dummyimage.com/150x150/ced4da/6c757d" alt="..." />
+                            <img class="img-fluid rounded-circle mb-4 px-4" src="assets/Kyle.png" alt="..." />
                             <h5 class="fw-bolder">Kyle DeLong</h5>
                             <!-- <div class="fst-italic text-muted">Founder &amp; CEO</div> -->
                         </div>
                     </div>
                     <div class="col mb-5 mb-5 mb-xl-0">
                         <div class="text-center">
-                            <img class="img-fluid rounded-circle mb-4 px-4" src="https://dummyimage.com/150x150/ced4da/6c757d" alt="..." />
+                            <img class="img-fluid rounded-circle mb-4 px-4" src="assets/Ashley.png" alt="..." />
                             <h5 class="fw-bolder">Ashley Ross</h5>
                             <!-- <div class="fst-italic text-muted">CFO</div> -->
                         </div>
                     </div>
                     <div class="col mb-5 mb-5 mb-sm-0">
                         <div class="text-center">
-                            <img class="img-fluid rounded-circle mb-4 px-4" src="https://dummyimage.com/150x150/ced4da/6c757d" alt="..." />
+                            <img class="img-fluid rounded-circle mb-4 px-4" src="assets/Regine.png" alt="..." />
                             <h5 class="fw-bolder">Regine Strey</h5>
                             <!-- <div class="fst-italic text-muted">Operations Manager</div> -->
                         </div>
                     </div>
                     <div class="col mb-5">
                         <div class="text-center">
-                            <img class="img-fluid rounded-circle mb-4 px-4" src="https://dummyimage.com/150x150/ced4da/6c757d" alt="..." />
+                            <img class="img-fluid rounded-circle mb-4 px-4" src="assets/John.png" alt="..." />
                             <h5 class="fw-bolder">John Eagan</h5>
                             <!-- <div class="fst-italic text-muted">CTO</div> -->
                         </div>
