--- a/Webpage/startbootstrap-modern-business-gh-pages/index.html
+++ b/Webpage/startbootstrap-modern-business-gh-pages/index.html
@@ -23,8 +23,8 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="about.html">Ashley's Page</a></li>
-                            <li class="nav-item"><a class="nav-link" href="contact.html">Kyle's Page</a></li>
+                            <li class="nav-item"><a class="nav-link" href="kyletableau.html">Study Subject Analysis</a></li>
+                            <li class="nav-item"><a class="nav-link" href="ashleytableau.html">USA Heart Disease Mortality</a></li>
                             <!-- <li class="nav-item"><a class="nav-link" href="pricing.html">Pricing</a></li>
                             <li class="nav-item"><a class="nav-link" href="faq.html">FAQ</a></li> -->
                             <!-- <li class="nav-item dropdown">
@@ -78,7 +78,7 @@
                                 <div class="col mb-5 h-100">
                                     <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-building"></i></div>
                                     <h2 class="h5">K-Nearest neighbor</h2>
-                                    <p class="mb-0">K Nearest Neighbor is often considered a lazy learner; it doesnt' techniaclly train a model to make predictions. So instead, the team used the model to predict that class of the nearest observation.</p>
+                                    <p class="mb-0">K Nearest Neighbor is often considered a lazy learner; it doesn't technically train a model to make predictions. So instead, the team used the model to predict that class of the nearest observation.</p>
                                 </div>
                                 <div class="col mb-5 mb-md-0 h-100">
                                     <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-toggles2"></i></div>
@@ -101,7 +101,7 @@
                     <div class="row gx-5 justify-content-center">
                         <div class="col-lg-10 col-xl-7">
                             <div class="text-center">
-                                <div class="fs-4 mb-4 fst-italic">The Support vector machine was the best performing model in terms of accuracy. With more data however, better models can be built.</div>
+                                <div class="fs-4 mb-4 fst-italic">The Support vector machine was the best performing model in terms of accuracy. However, with more data, better models can be built.</div>
                                 <div class="d-flex align-items-center justify-content-center">
                                     <!-- <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d" alt="..." />
                                     <div class="fw-bold">
@@ -198,7 +198,7 @@
                                 <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0" src="assets/feature_importance.png" alt="..." /></div>
                                 <div class="col-lg-6">
                                     <h2 class="fw-bolder">SVM</h2>
-                                    <p class="lead fw-normal text-muted mb-0">The most important features in predicting the risk of developing heart disease were age and sex. The Support vector machine was the best performing model in terms of accuracy. As you age, so do your blood vessels. They become less flexible, making it harder for blood to move through them easily. Fatty deposits called plaques also collect along your atery walls and slow the blood flow from the heart. The incidence of heart disease is known to be higher in men than in women of similar age, and this gender difference is more prominent at a younger age and is partly explained by protective effects of sex hormones. Accuracy for the model equaled 86%. </p>
+                                    <p class="lead fw-normal text-muted mb-0">The most important features in predicting the risk of developing heart disease were age and sex. The Support vector machine was the best performing model in terms of accuracy. As you age, so do your blood vessels. They become less flexible, making it harder for blood to move through them easily. Fatty deposits called plaques also collect along your artery walls and slow the blood flow from the heart. The incidence of heart disease is known to be higher in men than in women of similar age, and this gender difference is more prominent at a younger age and is partly explained by protective effects of sex hormones. Accuracy for the model equaled 86%. </p>
                                 </div>
                             </div>
                         </div>
