Facts page added and index updated

--- a/Webpage/startbootstrap-modern-business-gh-pages/index.html
+++ b/Webpage/startbootstrap-modern-business-gh-pages/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Modern Business - Start Bootstrap Template</title>
+        <title>Heart Disease Predictor</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap icons-->
@@ -25,6 +25,7 @@
                             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                             <li class="nav-item"><a class="nav-link" href="about.html">Ashley's Page</a></li>
                             <li class="nav-item"><a class="nav-link" href="contact.html">Kyle's Page</a></li>
+                            <li class="nav-item"><a class="nav-link" href="facts.html">Facts and Figures</a></li>
                             <!-- <li class="nav-item"><a class="nav-link" href="pricing.html">Pricing</a></li>
                             <li class="nav-item"><a class="nav-link" href="faq.html">FAQ</a></li> -->
                             <!-- <li class="nav-item dropdown">
@@ -59,7 +60,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-xl-5 col-xxl-6 d-none d-xl-block text-center"><img class="img-fluid rounded-3 my-5" src="https://dummyimage.com/600x400/343a40/6c757d" alt="..." /></div>
+                        <div class="col-xl-5 col-xxl-6 d-none d-xl-block text-center"><img class="img-fluid rounded-3 my-5" src="assets/index-photo.jpg" alt="Heart Photo" /></div>
                     </div>
                 </div>
             </header>
@@ -78,7 +79,7 @@
                                 <div class="col mb-5 h-100">
                                     <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-building"></i></div>
                                     <h2 class="h5">K-Nearest neighbor</h2>
-                                    <p class="mb-0">K Nearest Neighbor is often considered a lazy learner; it doesnt' techniaclly train a model to make predictions. So instead, the team used the model to predict that class of the nearest observation.</p>
+                                    <p class="mb-0">K Nearest Neighbor is often considered a lazy learner; it doesnt' technically train a model to make predictions. Instead, the team used the model to predict that class of the nearest observation.</p>
                                 </div>
                                 <div class="col mb-5 mb-md-0 h-100">
                                     <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-toggles2"></i></div>
