--- a/Webpage/startbootstrap-modern-business-gh-pages/index.html
+++ b/Webpage/startbootstrap-modern-business-gh-pages/index.html
@@ -23,8 +23,9 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="kyletableau.html">Study Subject Analysis</a></li>
-                            <li class="nav-item"><a class="nav-link" href="ashleytableau.html">USA Heart Disease Mortality</a></li>
+                            <li class="nav-item"><a class="nav-link" href="ashleytableau.html">Ashley's Page</a></li>
+                            <li class="nav-item"><a class="nav-link" href="contact.html">Kyle's Page</a></li>
+                            <li class="nav-item"><a class="nav-link" href="facts.html">Facts and Figures</a></li>
                             <!-- <li class="nav-item"><a class="nav-link" href="pricing.html">Pricing</a></li>
                             <li class="nav-item"><a class="nav-link" href="faq.html">FAQ</a></li> -->
                             <!-- <li class="nav-item dropdown">
