resolving conflicts on index.html

--- a/Webpage/startbootstrap-modern-business-gh-pages/index.html
+++ b/Webpage/startbootstrap-modern-business-gh-pages/index.html
@@ -79,7 +79,7 @@
                                 <div class="col mb-5 h-100">
                                     <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-building"></i></div>
                                     <h2 class="h5">K-Nearest neighbor</h2>
-                                    <p class="mb-0">K Nearest Neighbor is often considered a lazy learner; it doesn't technically train a model to make predictions. So instead, the team used the model to predict that class of the nearest observation.</p>
+                                    <p class="mb-0">K Nearest Neighbor is often considered a lazy learner; it doesnt' technically train a model to make predictions. Instead, the team used the model to predict that class of the nearest observation.</p>
                                 </div>
                                 <div class="col mb-5 mb-md-0 h-100">
                                     <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-toggles2"></i></div>
