Updated facts page

--- a/Webpage/startbootstrap-modern-business-gh-pages/facts.html
+++ b/Webpage/startbootstrap-modern-business-gh-pages/facts.html
@@ -50,9 +50,9 @@
                     <div class="row justify-content-center">
                         <div class="col-lg-8 col-xxl-6">
                             <div class="text-center my-5">
-                                <h1 class="fw-bolder mb-3">Our mission is to make building websites easier for everyone.</h1>
-                                <p class="lead fw-normal text-muted mb-4">Start Bootstrap was built on the idea that quality, functional website templates and themes should be available to everyone. Use our open source, free products, or support us by purchasing one of our premium products or services.</p>
-                                <a class="btn btn-primary btn-lg" href="#scroll-target">Read our story</a>
+                                <h1 class="fw-bolder mb-3">We strive to educate about Heart Disease.</h1>
+                                <p class="lead fw-normal text-muted mb-4">As a leading cause of death in the United States and highly prevalent illness in adults, Heart Disease is at the top of the CDC's list of chronic illnesses. We seek to shed light upon the common causes and risk factors associated with this disease.</p>
+                                <!-- <a class="btn btn-primary btn-lg" href="#scroll-target">Read our story</a> -->
                             </div>
                         </div>
                     </div>
