--- a/Webpage/startbootstrap-modern-business-gh-pages/ashleytableau.html
+++ b/Webpage/startbootstrap-modern-business-gh-pages/ashleytableau.html
@@ -53,7 +53,7 @@
                 </section>
             
                 <section class="py-5 bg-light" id="scroll-target">   
-                    <div class="tab-content">
+                    <div class="container px-5">
                         <h2 class="fw-bolder">Gender &amp; Race</h2>
                         <p class=".align-middle">As shown in our machine learning model, the overwhelming factor for risk of death by heart disease is gender. Males have a significantly higher mortality rate overall and within each race category. State data doesn't show specific states having substantially higher overall mortality rates, but further drilled down into race some differences are present. This is most likely due to population centers with higher concentrations of a specfic race.</p>
                     </div>  
