final ashleyhtml update

--- a/Webpage/startbootstrap-modern-business-gh-pages/ashleytableau.html
+++ b/Webpage/startbootstrap-modern-business-gh-pages/ashleytableau.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
+        <title>Heart Disease Predictor</title>
         <title>CDC Mortality Rate Stats</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
