final ashley html update

--- a/Webpage/ashleytableau.html
+++ b/Webpage/ashleytableau.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>CDC Mortality Rate Stats</title>
+        <title>Heart Disease Predictor</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap icons-->
